crates/xifty-cli/tests/snapshots/cli_contract__probe_happy_mp4.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "probe_json(\"happy.mp4\")"
---
{
  "containers": [
    {
      "kind": "box",
      "label": "ftyp",
      "offset_end": 20,
      "offset_start": 0
    },
    {
      "kind": "box",
      "label": "moov",
      "offset_end": 793,
      "offset_start": 20
    },
    {
      "kind": "box",
      "label": "moov/mvhd",
      "offset_end": 64,
      "offset_start": 28,
      "parent_label": "moov"
    },
    {
      "kind": "box",
      "label": "moov/trak",
      "offset_end": 398,
      "offset_start": 64,
      "parent_label": "moov"
    },
    {
      "kind": "box",
      "label": "moov/trak/tkhd",
      "offset_end": 164,
      "offset_start": 72,
      "parent_label": "moov/trak"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia",
      "offset_end": 398,
      "offset_start": 164,
      "parent_label": "moov/trak"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/mdhd",
      "offset_end": 204,
      "offset_start": 172,
      "parent_label": "moov/trak/mdia"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/hdlr",
      "offset_end": 236,
      "offset_start": 204,
      "parent_label": "moov/trak/mdia"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/minf",
      "offset_end": 398,
      "offset_start": 236,
      "parent_label": "moov/trak/mdia"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/minf/stbl",
      "offset_end": 398,
      "offset_start": 244,
      "parent_label": "moov/trak/mdia/minf"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/minf/stbl/stsd",
      "offset_end": 374,
      "offset_start": 252,
      "parent_label": "moov/trak/mdia/minf/stbl"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/minf/stbl/stts",
      "offset_end": 398,
      "offset_start": 374,
      "parent_label": "moov/trak/mdia/minf/stbl"
    },
    {
      "kind": "box",
      "label": "moov/trak",
      "offset_end": 662,
      "offset_start": 398,
      "parent_label": "moov"
    },
    {
      "kind": "box",
      "label": "moov/trak/tkhd",
      "offset_end": 498,
      "offset_start": 406,
      "parent_label": "moov/trak"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia",
      "offset_end": 662,
      "offset_start": 498,
      "parent_label": "moov/trak"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/mdhd",
      "offset_end": 538,
      "offset_start": 506,
      "parent_label": "moov/trak/mdia"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/hdlr",
      "offset_end": 570,
      "offset_start": 538,
      "parent_label": "moov/trak/mdia"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/minf",
      "offset_end": 662,
      "offset_start": 570,
      "parent_label": "moov/trak/mdia"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/minf/stbl",
      "offset_end": 662,
      "offset_start": 578,
      "parent_label": "moov/trak/mdia/minf"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/minf/stbl/stsd",
      "offset_end": 638,
      "offset_start": 586,
      "parent_label": "moov/trak/mdia/minf/stbl"
    },
    {
      "kind": "box",
      "label": "moov/trak/mdia/minf/stbl/stts",
      "offset_end": 662,
      "offset_start": 638,
      "parent_label": "moov/trak/mdia/minf/stbl"
    },
    {
      "kind": "box",
      "label": "moov/udta",
      "offset_end": 793,
      "offset_start": 662,
      "parent_label": "moov"
    },
    {
      "kind": "box",
      "label": "moov/udta/meta",
      "offset_end": 793,
      "offset_start": 670,
      "parent_label": "moov/udta"
    },
    {
      "kind": "box",
      "label": "moov/udta/meta/ilst",
      "offset_end": 793,
      "offset_start": 682,
      "parent_label": "moov/udta/meta"
    },
    {
      "kind": "box",
      "label": "moov/udta/meta/ilst/�ART",
      "offset_end": 718,
      "offset_start": 690,
      "parent_label": "moov/udta/meta/ilst"
    },
    {
      "kind": "box",
      "label": "moov/udta/meta/ilst/�too",
      "offset_end": 756,
      "offset_start": 718,
      "parent_label": "moov/udta/meta/ilst"
    },
    {
      "kind": "box",
      "label": "moov/udta/meta/ilst/�nam",
      "offset_end": 793,
      "offset_start": 756,
      "parent_label": "moov/udta/meta/ilst"
    }
  ],
  "input": {
    "container": "isobmff",
    "detected_format": "mp4",
    "path": "happy.mp4"
  },
  "report": {
    "conflicts": [],
    "issues": [
      {
        "code": "no_metadata_entries",
        "message": "no supported metadata entries were decoded",
        "severity": "info"
      }
    ]
  },
  "schema_version": "0.1.0"
}
