crates/xifty-cli/tests/snapshots/cli_contract__probe_happy_nef.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "probe_json(\"happy.nef\")"
---
{
  "containers": [
    {
      "kind": "container",
      "label": "tiff",
      "offset_end": 224,
      "offset_start": 0
    },
    {
      "kind": "ifd",
      "label": "ifd0",
      "offset_end": 70,
      "offset_start": 8,
      "parent_label": "tiff"
    },
    {
      "kind": "ifd",
      "label": "exif_ifd",
      "offset_end": 129,
      "offset_start": 103,
      "parent_label": "tiff"
    }
  ],
  "input": {
    "container": "nef",
    "detected_format": "nef",
    "path": "happy.nef"
  },
  "report": {
    "conflicts": [],
    "issues": [
      {
        "code": "no_metadata_entries",
        "message": "no supported metadata entries were decoded",
        "severity": "info"
      }
    ]
  },
  "schema_version": "0.1.0"
}
