crates/xifty-cli/tests/snapshots/cli_contract__probe_happy_opus.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "probe_json(\"happy.opus\")"
---
{
  "containers": [
    {
      "kind": "container",
      "label": "ogg",
      "offset_end": 210,
      "offset_start": 0
    },
    {
      "kind": "page",
      "label": "page",
      "offset_end": 47,
      "offset_start": 0,
      "parent_label": "ogg"
    },
    {
      "kind": "page",
      "label": "page",
      "offset_end": 166,
      "offset_start": 47,
      "parent_label": "ogg"
    },
    {
      "kind": "page",
      "label": "page",
      "offset_end": 210,
      "offset_start": 166,
      "parent_label": "ogg"
    }
  ],
  "input": {
    "container": "ogg",
    "detected_format": "ogg",
    "path": "happy.opus"
  },
  "report": {
    "conflicts": [],
    "issues": [
      {
        "code": "no_metadata_entries",
        "message": "no supported metadata entries were decoded",
        "severity": "info"
      }
    ]
  },
  "schema_version": "0.1.0"
}
